feat(10): add cities update
