# src/cities/cities.controller.ts
@@ -7,10 +7,13 @@ import {
   UsePipes,
   BadRequestException,
   NotFoundException,
+  ConflictException,
+  UnprocessableEntityException,
+  Put,
 } from "@nestjs/common";
 import { CreateCityDto, CityDto } from "./cities.dto";
 import { CitiesService } from "./cities.service";
-import { ValidationPipe } from "./cities.validation.pipe";
+import { ObjectTransformPipe, ValidationPipe } from "./cities.validation.pipe";
 import { ApiOperation, ApiResponse, ApiTags } from "@nestjs/swagger";
 
 @Controller("cities")
@@ -28,8 +31,21 @@ export class CitiesController {
   })
   async create(@Body() createCityDto: CreateCityDto) {
     try {
-      return await this.citiesService.create(createCityDto);
+      const city = await this.citiesService.getByEssentialData(
+        createCityDto.name,
+        createCityDto.country
+      );
+      if (city) {
+        throw new ConflictException(
+          "City with this name and country already exists"
+        );
+      } else {
+        return await this.citiesService.create(createCityDto);
+      }
     } catch (error: any) {
+      if (error instanceof ConflictException) {
+        throw error;
+      }
       throw new BadRequestException(
         error.message || "An error occurred while creating the city"
       );
@@ -76,6 +92,37 @@ export class CitiesController {
       throw new BadRequestException(
         error.message ||
           `An error occurred while fetching the city with id: ${id}`
+      );
+    }
+  }
+
+  @Put()
+  @UsePipes(ObjectTransformPipe)
+  @ApiOperation({ summary: "Update cities" })
+  @ApiResponse({
+    status: 200,
+    description: "Successfully updated cities cities.",
+    isArray: true,
+    type: CityDto,
+  })
+  async update(@Body() data: CityDto[]) {
+    try {
+      if (data.length === 1) {
+        const [city] = data;
+        return await this.citiesService.updateSingle(Number(city.id), city);
+      } else if (data.length > 1) {
+        return await this.citiesService.updateMany(data);
+      } else {
+        throw new UnprocessableEntityException(
+          "When you update multiple cities you need to provide array of CityDto."
+        );
+      }
+    } catch (error: any) {
+      if (error instanceof UnprocessableEntityException) {
+        throw error;
+      }
+      throw new BadRequestException(
+        error.message || "An error occurred while fetching all the cities"
       );
     }
   }
