# src/swagger-doc.json
@@ -140,6 +140,42 @@
         "tags": [
           "cities"
         ]
+      },
+      "put": {
+        "operationId": "CitiesController_update",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully updated cities cities.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CityDto"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Update cities",
+        "tags": [
+          "cities"
+        ]
       }
     },
     "/cities/{id}": {
